# detection

./: .gitignore  Cargo.toml  README.md
config/: log4rs.yaml
src/: alert.rs  cli.rs  config.rs  display.rs  error.rs  lib.rs  logger.rs  main.rs  monitor.rs  storage.rs  utils.rs
src/display/: mod.rs  tui.rs
src/web/: mod.rs
static/: index.html
