[package]
name = "memory_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29.11"
log = "0.4"
tabled = "0.3"
log4rs = { version = "1.3.0", features = ["all_components", "gzip"] }
crossterm = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.2.25", features = ["derive"] }
tray-item = "0.7"
axum = "0.6"
thiserror = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = "0.4"
actix-web = { version = "4.3", features = ["macros"] }
actix-files = "0.6"
tokio = { version = "1.0", features = ["full"] }
tui = "0.19"

[dev-dependencies]
tempfile = "3.8"